# osc-physrisk-financial

./: .coveragerc  .devops-exclusions  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  SECURITY.md  pyproject.toml  pyscaffold.cfg  ruff.toml  setup.sh  test.sh
.github/: dependabot.yml
.github/workflows/: builds.yaml  codeql.yml  dependencies.yaml  documentation.yaml  release.yaml  security.yaml  test-release.yaml  testing.yaml  tooling.yaml
docs/: assets.rst  conf.py  dynamics.rst  functions.rst  index.rst  license.rst  modules.rst  random_variables.rst  readme.rst  requirements.txt
src/osc_physrisk_financial/: __init__.py  assets.py  dynamics.py  functions.py  random_variables.py  skeleton.py
tests/: conftest.py  test_dynamics.py  test_functions.py  test_powerPlant.py  test_random_variables.py  test_realstate.py  test_skeleton.py
