[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.pdm]
package-dir = "src"

[project]
name = "osc-physrisk-financial"
description = "Physical climate risk financial valuation"
readme = "README.md"
dynamic = ["version"]
keywords = ["Financial risk", "climate", "Physical risk"]
authors = [
    {name = "Arfima Dev", email = "dev@arfima.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
dependencies = [
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "plotly>=5.15",
    "numpy>=1.24",
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/os-climate/osc-physrisk-financial"
"Documentation" = "https://github.com/os-climate/osc-physrisk-financial"
"Bug Tracker" = "https://github.com/os-climate/osc-physrisk-financial/issues"


[project.optional-dependencies]
docs = [
  "myst_parser>=3.0.1",
  "pydata_sphinx_theme>=0.15.4",
  "sphinx>=7.3.7",
  "sphinx_design>=0.6.0"
]
testing = [
    "pytest",
    "pytest-cov",
]

[tool.pdm.version]
source = "scm"
write_to = "osc_physrisk_financial/_version.py"
write_template = "version: str\n__version__: str\n__version__ = version =  '{}'\n"
tag_regex = '^(?:[\w-]+-)?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+-]*?)(?:\-.*)?(?:\+.*)?(?:\-.*)?$'
